style.css
/* GENERAL */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-family: "League Spartan", sans-serif;
}

body {
  background-color: #fafbff;
  padding: 2rem;
}

h1 {
  color: #0018a4;
  font-size: 4rem;
  font-weight: 700;
  margin-bottom: 4rem;
  text-align: center;
}

/* FILTERS */
.filters-container {
  display: flex;
  flex-direction: column;
  gap: 3rem;
  margin-bottom: 4rem;
}

.filter {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.filter-label {
  color: #000;
  text-align: center;
  font-size: 1.3rem;
  font-weight: 700;
}

/* CUSTOM SELECT DROPDOWN */
.dropdown {
  position: relative;
  text-align: center;
}

.dropdown-selected {
  background-color: #0018a4;
  color: #fafbff;
  padding: 5px 10px;
  border-radius: 5px;
  cursor: pointer;
}

.dropdown-items {
  position: absolute;
  display: none;
  background-color: #0018a4;
  color: #fafbff;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  border-radius: 5px;
  z-index: 1;
  width: 100%;
}

.dropdown-items.dropdown-open {
  display: block;
}

.dropdown-option {
  padding: 10px;
  cursor: pointer;
}

.dropdown-option:hover {
  background-color: #ccffe2;
  color: #0018a4;
}

.sort.dropdown-selected {
  background-color: #ff6589;
}

.sort.dropdown-items {
  background-color: #ff6589;
}

.sort.dropdown-option:hover {
  background-color: #ffecea;
  color: #0018a4;
}

